k8s/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cleanview

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: cleanview
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cleanview
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
